@@ -38,12 +38,9 @@
 package com.sun.jersey.json.impl.provider.entity;
 
 import com.sun.jersey.api.json.JSONJAXBContext;
+import com.sun.jersey.api.json.JSONMarshaller;
 import com.sun.jersey.core.provider.jaxb.AbstractJAXBElementProvider;
-import java.io.InputStream;
-import java.io.InputStreamReader;
-import java.io.OutputStream;
-import java.io.OutputStreamWriter;
-import java.nio.charset.Charset;
+
 import javax.ws.rs.Consumes;
 import javax.ws.rs.Produces;
 import javax.ws.rs.core.Context;
@@ -53,6 +50,11 @@ import javax.xml.bind.JAXBElement;
 import javax.xml.bind.JAXBException;
 import javax.xml.bind.Marshaller;
 import javax.xml.bind.Unmarshaller;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.io.OutputStream;
+import java.io.OutputStreamWriter;
+import java.nio.charset.Charset;
 
 /**
  *
@@ -98,7 +100,8 @@ public class JSONJAXBElementProvider extends AbstractJAXBElementProvider {
             Marshaller m, OutputStream entityStream)
             throws JAXBException {
 
-        JSONJAXBContext.getJSONMarshaller(m).
-                marshallToJSON(t, new OutputStreamWriter(entityStream, c));
+        JSONMarshaller jsonMarshaller = JSONJAXBContext.getJSONMarshaller(m);
+        jsonMarshaller.setProperty(JSONMarshaller.FORMATTED, getFormattedOutput());
+        jsonMarshaller.marshallToJSON(t, new OutputStreamWriter(entityStream, c));
     }
 }
