@@ -1,4 +1,5 @@
 release 1.1.5 (2010)
+- Added formatted support when JSON with natural notation is used
 - Fixed issue 362
   https://jersey.dev.java.net/issues/show_bug.cgi?id=362
   Deprecated HttpHelper.getAcceptLangauge and added new method
